# multithreading

./: .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json
.cache/clangd/index/: Database.cpp.5E0335480CB29F07.idx  IServer.h.CF16EA19E6DEBBE3.idx  InvalidDeleteUser.h.1A33B4A75AF35DC0.idx  Server.cpp.841BA8534D3C386B.idx  Server.h.7AC3A7C8F540B6B7.idx  ServerTestBoost.cpp.B698EE3AD22DE6E1.idx  TestServer.cpp.6B5C7B11A0C540A7.idx  TestServer.h.5E5E64432916B2BC.idx  TestUser.h.A5F6B603AAEFC52F.idx  User.cpp.E770F4B8D819B618.idx  User.h.194189C5D9DF71E7.idx  gmock-actions.h.6E45B696C739C410.idx  gmock-actions.h.BA49459A184C9A95.idx  gmock-all.cc.B27522A5753B5621.idx  gmock-all.cc.F4B82CA588628027.idx  gmock-cardinalities.cc.2A28B2EA62F8BC17.idx  gmock-cardinalities.cc.7B8786F761BA7D61.idx  gmock-cardinalities.h.3174700FCE1CD43E.idx  gmock-cardinalities.h.D8A4916F842B2EA1.idx  gmock-function-mocker.h.A68C268B4E8155B1.idx  gmock-function-mocker.h.CFEFFCDD444D21DC.idx  gmock-generated-actions.h.2BDAAD6911083097.idx  gmock-generated-actions.h.6853173E4BE437AD.idx  gmock-internal-utils.cc.22255408525E5594.idx  gmock-internal-utils.cc.48530251618E0F49.idx  gmock-internal-utils.h.17283100D78C39C8.idx  gmock-internal-utils.h.8A2F7F099493D2E5.idx  gmock-matchers.cc.5B5C3004B1E3D6AC.idx  gmock-matchers.cc.92E3AE842C91C0ED.idx  gmock-matchers.h.14513F91D78EE3C1.idx  gmock-matchers.h.25FCC16ADB0389B5.idx  gmock-matchers.h.5E67B7CACF90CFDA.idx  (+97 more)
cmake/: UpdateSubmodules.cmake
src/: main.cpp
src/chat/: CMakeLists.txt  Chat.h  IChat.h  TestChat.h
src/db/: CMakeLists.txt  Database.cpp  Database.h  IDatabase.h  TestDatabase.cpp  TestDatabase.h
src/exception/: CMakeLists.txt  InvalidDeleteUser.h
src/exceptions/: InvalidDeleteUser.h
src/json/: Buffer.h
src/net/: CMakeLists.txt  MessageBuffer.h  Session.h
src/server/: CMakeLists.txt  IServer.h  Server.cpp  Server.h  TestServer.cpp  TestServer.h
src/user/: CMakeLists.txt  IUser.h  TestUser.h  User.cpp  User.h
tests/: ChatTest.cpp  DatabaseTest.cpp  DatabaseTests.cpp  NetworkTest.cpp  ServerTestBoost.cpp  UserTest.cpp
todo/: chat.json  todo.md  user.json
(+26 files in other folders)
